--- a/style/contact.css
+++ b/style/contact.css
@@ -1,8 +1,6 @@
 body {
     margin: 0;
-    background-image: url(../img/people-bg1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #222222;
 }
 
 .logo img {
@@ -73,7 +71,7 @@ body {
     color: peru;
 }
 
-.people-container-1 {
+.contact-container-1 {
     display: flex;
 }
 
@@ -82,7 +80,7 @@ body {
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     color: whitesmoke;
-    margin-left: 65px;
+    padding-left: 65px;
 }
 
 .subnav-title {
@@ -113,119 +111,93 @@ body {
     color: brown;
 }
 
-#people-column-2 {
-    margin-top: 80px;
-    margin-left: 75px;
+#contact-column-2 {
+    margin-top: 90px;
+    margin-left: 200px;
 }
 
-#people-name-1 {
+#contact-title-1 {
     font-family: 'Kablammo', cursive;
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     color: whitesmoke;
     font-size: 32px;
     font-weight: bold;
-    padding-bottom: 25px;
+    margin-bottom: 90px;
 }
 
-#people-column-2 img {
-    width: 232px;
-    border-radius: 30px;
-    margin-left: -15px;
+#contact-input-form div {
+    margin-top: 40px;
+    margin-left: 235px;
 }
 
-#people-column-3 {
-    margin-top: 160px;
-    margin-left: 75px;
-}
-
-#people-desc {
-    background: rgba(0, 0, 0, 0.5);
-    margin-top: -18px;
-    padding: 20px 20px 20px 10px;
-    border-radius: 30px;
-    max-width: 500px;
-    max-height: 200px;
-}
-
-#people-desc ul li {
-    margin-bottom: 30px;
+.input-contact {
+    color: whitesmoke;
+    width: 650px;
+    border: none;
     font-family: 'Kablammo', cursive;
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
+    padding: 10px 15px 10px 15px;
+    border-bottom: 3px solid whitesmoke;
+    margin-bottom: 25px;
+    background-color: transparent;
+}
+
+#send-btn {
+    font-family: 'Kablammo', cursive;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #A52A2A;
+    color: white;
+    text-decoration: none;
+    padding: 10px 50px;
+    border: none;
+    margin-top: 30px;
+    margin-left: 240px;
+}
+
+#send-btn:hover {
+    color: black;
+}
+
+.socialMenu {
+    display: flex;
+    gap: 30px;
+    position: absolute;
+    left: 47.5%;
+    bottom: 3%;
+}
+
+.social-links a img {
+    width: 40px;
+}
+
+.contact-info {
+    position: absolute;
+    right: 5%;
+    bottom: 3%;
+}
+
+.contact-links a {
+    font-family: 'Kablammo', cursive;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    margin-bottom: 20px;
     color: whitesmoke;
 }
 
-.people-reponsive {
-    display: flex;
+.contact-links a img {
+    width: 35px;
+    padding-right: 18px;
+    vertical-align: middle;
 }
 
-/*Tablet view*/
-@media screen and (max-width: 820px) {
-    body {
-        background-size: auto;
-        background-position-x: center;
-    }
-
-    .logo img {
-        width: 170px;
-        margin-top: -5px;
-        margin-left: -10px;
-    }
-
-    .subnav {
-        margin-left: 35px;
-    }
-
-    .people-reponsive {
-        display: block;
-        margin-top: 30px;
-    }
-
-    #people-column-3 {
-        margin-top: 50px;
-        margin-left: 55px;
-    }
-}
-
-/*Mobile view*/
-@media screen and (max-width: 420px) {
-    body {
-        background-size: auto;
-        background-position-x: center;
-    }
-
-    .people-container-1 {
-        display: block;
-    }
-
-    #people-name-1 {
-        margin-left: -40px;
-        font-size: 28px;
-    }
-
-    #people-column-2 img {
-        width: 350px;
-        margin-left: -45px;
-    }
-
-    #people-column-3 {
-        margin-left: 30px;
-    }
-
-    #people-desc {
-        max-width: 325px;
-        margin-bottom: 50px;
-    }
-
-    .sideBtn {
-        position: sticky;
-        top: 0;
-        right: 0;
-    }
-
-    #people-desc ul li {
-        font-size: 14px;
-    }
+.contact-info-links {
+    margin-top: 20px;
 }
