--- a/style/home.css
+++ b/style/home.css
@@ -12,6 +12,7 @@ body {
 }
 
 .navbar {
+    background: rgba(122, 121, 121, 0.5);
     display: flex;
     align-items: center;
     font-family: 'Kablammo', cursive;
@@ -20,7 +21,8 @@ body {
     font-weight: bold;
     font-size: 16px;
     gap: 43px;
-    padding-right: 20px;
+    padding: 0px 50px 0px 50px;
+    border-radius: 30px;
 }
 
 .navbar div a {
@@ -112,7 +114,7 @@ body {
     color: whitesmoke;
     padding: 10px 15px;
     border: none;
-
+    margin-left: 25px;
 }
 
 .openbtn:hover {
