--- a/style/about.css
+++ b/style/about.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     background-image: url(../img/about-bg2.png);
@@ -126,7 +130,7 @@ body {
     color: whitesmoke;
     font-size: 32px;
     font-weight: bold;
-    padding-bottom: 25px;
+    padding: 25px;
 }
 
 #about-desc {
@@ -173,6 +177,10 @@ body {
     transform: scale(1.5);
 }
 
+.sidebar .closebtn {
+    top: 1%;
+}
+
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     body {
@@ -198,7 +206,7 @@ body {
     }
 
     #about-desc {
-        max-width: 400px;
+        max-width: 450px;
         padding: 10px 20px 10px 20px;
     }
 
@@ -208,7 +216,7 @@ body {
 
     #about-history-image {
         display: block;
-        margin-left: 15px;
+        margin-left: 35px;
     }
 
     #about-history-image p {
@@ -216,6 +224,31 @@ body {
         margin-left: 27%;
         margin-bottom: 20px;
         font-size: 12px;
+    }
+
+    .sidebar .closebtn {
+        top: 1%;
+    }
+
+    #scrollTopBtn {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: lightslategray;
+        color: white;
+        cursor: pointer;
+        padding: 15px 20px 10px 20px;
+        text-decoration: none;
+        border-radius: 4px;
+    }
+
+    #myBtn:hover {
+        background-color: #555;
     }
 }
 
@@ -226,7 +259,6 @@ body {
     }
 
     #about-title-1 {
-        margin-left: -40px;
         font-size: 28px;
     }
 
@@ -247,13 +279,18 @@ body {
 
     #about-history-image img {
         width: 290px;
+        margin-left: -20px;
     }
 
     #about-history-image p {
-        margin-left: 23%;
+        margin-left: 15%;
     }
 
     #about-history-image img:hover {
         transform: scale(1.2);
+    }
+
+    .sidebar .closebtn {
+        top: 1%;
     }
 }
