--- a/style/people.css
+++ b/style/people.css
@@ -1,6 +1,10 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
-    background-image: url(../img/people-bg1.jpg);
+    background-image: url(../img/people-bg2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -125,7 +129,6 @@ body {
     color: whitesmoke;
     font-size: 32px;
     font-weight: bold;
-    padding-bottom: 25px;
 }
 
 #people-column-2 img {
@@ -142,18 +145,18 @@ body {
 #people-desc {
     background: rgba(0, 0, 0, 0.5);
     margin-top: -18px;
-    padding: 20px 20px 20px 10px;
+    padding: 20px 25px 20px 25px;
     border-radius: 30px;
     max-width: 500px;
-    max-height: 200px;
 }
 
-#people-desc ul li {
+#people-desc {
     margin-bottom: 30px;
     font-family: 'Kablammo', cursive;
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     font-size: 18px;
+    line-height: 35px;
     color: whitesmoke;
 }
 
@@ -161,11 +164,51 @@ body {
     display: flex;
 }
 
+.sidebar .closebtn {
+    top: 1%;
+}
+
+#sub-title {
+    font-family: 'Kablammo', cursive;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 14px;
+    color: whitesmoke;
+    margin: 5px 0px 10px 0px;
+}
+
+#scrollTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: lightslategray;
+    color: white;
+    cursor: pointer;
+    padding: 15px 20px 10px 20px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+#myBtn:hover {
+    background-color: #555;
+}
+
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     body {
-        background-size: auto;
+        background-size: cover;
         background-position-x: center;
+    }
+
+    .sideBtn {
+        position: sticky;
+        top: 0;
+        right: 0;
     }
 
     .logo img {
@@ -187,13 +230,23 @@ body {
         margin-top: 50px;
         margin-left: 55px;
     }
+
+    .sidebar .closebtn {
+        top: 1%;
+    }
 }
 
 /*Mobile view*/
 @media screen and (max-width: 420px) {
     body {
-        background-size: auto;
+        background-size: cover;
         background-position-x: center;
+    }
+
+    .sideBtn {
+        position: sticky;
+        top: 0;
+        right: 0;
     }
 
     .people-container-1 {
@@ -211,12 +264,12 @@ body {
     }
 
     #people-column-3 {
-        margin-left: 30px;
+        margin-left: 20px;
     }
 
     #people-desc {
         max-width: 325px;
-        margin-bottom: 50px;
+        font-size: 16px;
     }
 
     .sideBtn {
@@ -227,5 +280,13 @@ body {
 
     #people-desc ul li {
         font-size: 14px;
+    }
+
+    .sidebar .closebtn {
+        top: 1%;
+    }
+
+    #sub-title {
+        margin-left: -40px;
     }
 }
