--- a/style/about.css
+++ b/style/about.css
@@ -119,7 +119,7 @@ body {
 }
 
 #about-column-2 {
-    margin-top: 80px;
+    margin-top: 60px;
     margin-left: 75px;
 }
 
@@ -134,7 +134,7 @@ body {
 }
 
 #about-desc {
-    margin-top: 10px;
+    margin-bottom: 50px;
     padding: 10px 20px 30px 20px;
     border-radius: 30px;
     max-width: 900px;
@@ -170,7 +170,6 @@ body {
 #about-history-image img {
     transition: transform .2s;
     width: 380px;
-    border-radius: 30px;
 }
 
 #about-history-image img:hover {
@@ -181,12 +180,64 @@ body {
     top: 1%;
 }
 
+#scrollTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: lightslategray;
+    color: white;
+    cursor: pointer;
+    padding: 15px 20px 10px 20px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+#scrollTopBtn:hover {
+    background-color: #555;
+}
+
+.achievements-content {
+    display: flex;
+    font-family: 'Kablammo', cursive;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
+    color: whitesmoke;
+    padding: 25px;
+}
+
+.achievements-content ul {
+    line-height: 30px;
+    margin-left: -20px;
+    font-size: 20px;
+}
+
+.achievements-year {
+    margin-right: 150px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.achievements-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.about-divider {
+    border-bottom: 3px solid whitesmoke;
+    margin-bottom: 20px;
+}
+
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     body {
         background-size: cover;
         background-position-x: center;
-        padding-bottom: 40px;
     }
 
     .logo img {
@@ -230,25 +281,21 @@ body {
         top: 1%;
     }
 
-    #scrollTopBtn {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        font-size: 18px;
-        border: none;
-        outline: none;
-        background-color: lightslategray;
-        color: white;
-        cursor: pointer;
-        padding: 15px 20px 10px 20px;
-        text-decoration: none;
-        border-radius: 4px;
+    .achievements-content {
+        display: block;
     }
 
-    #myBtn:hover {
-        background-color: #555;
+    .achievements-year {
+        margin-bottom: 30px;
+        font-size: 20px;
+    }
+
+    .achievements-title {
+        font-size: 20px;
+    }
+
+    .achievements-content ul {
+        font-size: 16px;
     }
 }
 
@@ -292,5 +339,22 @@ body {
 
     .sidebar .closebtn {
         top: 1%;
+    }
+
+    .achievements-content {
+        display: block;
+    }
+
+    .achievements-year {
+        margin-bottom: 30px;
+        font-size: 20px;
+    }
+
+    .achievements-title {
+        font-size: 20px;
+    }
+
+    .achievements-content ul {
+        font-size: 16px;
     }
 }
