--- a/style/about.css
+++ b/style/about.css
@@ -297,6 +297,12 @@ body {
     .achievements-content ul {
         font-size: 16px;
     }
+
+    .solar-terms {
+        width: 400px;
+        padding-bottom: 20px;
+        margin-left: 20px;
+    }
 }
 
 /*Mobile view*/
@@ -356,5 +362,10 @@ body {
 
     .achievements-content ul {
         font-size: 16px;
+    }
+
+    .solar-terms {
+        width: 315px;
+        margin-left: 0px;
     }
 }
