--- a/style/about.css
+++ b/style/about.css
@@ -269,6 +269,14 @@ body {
     font-size: 22px;
 }
 
+.timeline-year {
+    font-size: 100px;
+    font-weight: bold;
+    margin-left: 50px;
+    margin-top: -60px;
+    opacity: 0.3;
+}
+
 .custom-ul {
     margin-bottom: 1rem;
     margin-left: -20px;
@@ -345,9 +353,21 @@ body {
     }
 
     .solar-terms {
-        width: 400px;
-        padding-bottom: 20px;
-        margin-left: 20px;
+        width: 450px;
+    }
+
+    .about-element {
+        width: 250px;
+    }
+
+    .timeline-year {
+        font-size: 80px;
+        margin-top: 0px;
+        margin-left: 250px;
+    }
+
+    .custom-ul {
+        width: 300px;
     }
 }
 
@@ -355,6 +375,10 @@ body {
 @media screen and (max-width: 420px) {
     body {
         background-position-x: center;
+    }
+
+    #about-column-2 {
+        margin-top: 20px;
     }
 
     #about-title-1 {
@@ -371,13 +395,8 @@ body {
         display: block;
     }
 
-    #about-desc {
-        margin-left: -45px;
-        margin-right: 30px;
-    }
-
     #about-history-image img {
-        width: 290px;
+        width: 350px;
         margin-left: -20px;
     }
 
@@ -411,7 +430,33 @@ body {
     }
 
     .solar-terms {
-        width: 315px;
+        width: 375px;
         margin-left: 0px;
+    }
+
+    .about-element {
+        display: none;
+    }
+
+    .subnav-links {
+        display: flex;
+        text-align: center;
+        margin-right: 40px;
+    }
+
+    .subnav-links a {
+        font-family: 'Kablammo', cursive;
+        font-family: 'Lato', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 18px;
+    }
+
+    #about-desc ul li {
+        margin-left: 10px;
+    }
+
+    .timeline-year {
+        font-size: 70px;
+        margin-right: 50px;
     }
 }
