--- a/style/people.css
+++ b/style/people.css
@@ -199,8 +199,8 @@ body {
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     body {
-        background-size: cover;
-        background-position-x: center;
+        background-position-x: 150px;
+        background-position-y: -230px;
     }
 
     .sideBtn {
@@ -268,6 +268,7 @@ body {
     #people-desc {
         max-width: 325px;
         font-size: 16px;
+        margin-left: 25px;
     }
 
     .sideBtn {
