--- a/style/contact.css
+++ b/style/contact.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
 }
@@ -198,6 +202,27 @@ body {
     top: 1%;
 }
 
+#scrollTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: lightslategray;
+    color: white;
+    cursor: pointer;
+    padding: 15px 20px 10px 20px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+#scrollTopBtn:hover {
+    background-color: #555;
+}
+
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     .sideBtn {
@@ -262,5 +287,9 @@ body {
 
     .contact-links a {
         font-size: 16px;
+    }
+
+    #contact-title-1 {
+        font-size: 28px;
     }
 }
