--- a/style/people.css
+++ b/style/people.css
@@ -192,7 +192,7 @@ body {
     border-radius: 4px;
 }
 
-#myBtn:hover {
+#scrollTopBtn:hover {
     background-color: #555;
 }
 
@@ -297,6 +297,6 @@ body {
     }
 
     #people-column-2 {
-        margin-top: 20px;
+        margin-top: 40px;
     }
 }
