--- a/style/people.css
+++ b/style/people.css
@@ -126,8 +126,9 @@ body {
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     color: black;
-    font-size: 32px;
+    font-size: 40px;
     font-weight: bold;
+    width: 280px;
 }
 
 #people-column-2 img {
@@ -145,6 +146,7 @@ body {
     margin-top: -18px;
     border-radius: 30px;
     max-width: 750px;
+    margin-left: -80px;
 }
 
 #people-desc {
@@ -231,6 +233,10 @@ body {
 
     .sidebar .closebtn {
         top: 1%;
+    }
+
+    #people-desc {
+        margin-left: 0;
     }
 }
 
