--- a/style/eventcoming.css
+++ b/style/eventcoming.css
@@ -1,20 +1,19 @@
 body {
     margin: 0;
     background-image: url(../img/bgwhite.png);
-
-
+    
+   
     /* background-color: white; */
     /* background-size: cover;
-    background-position: top; */
+    background-position: top; */ 
     background-position: left bottom -80px;
     background-repeat: no-repeat;
-    zoom: 90%;
+    
 }
-
-#event-column-1 {
+#event-column-1{
+    margin-left: 20px;
     margin-top: 20px;
 }
-
 .logo img {
     width: 244px;
     margin-top: -10px;
@@ -115,7 +114,6 @@ body {
     color: black;
     font-size: 18px;
 }
-
 .subnav-links a:focus {
     color: blue;
 }
@@ -134,7 +132,7 @@ body {
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     color: black;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: bold;
     padding-bottom: 25px;
 }
@@ -144,7 +142,7 @@ body {
     padding: 10px 20px 30px 20px;
     border-radius: 30px;
     max-width: 900px;
-
+   
 }
 
 #event-desc p {
@@ -185,13 +183,12 @@ body {
 
 /*Tablet view*/
 @media screen and (max-width: 820px) {
-
+    
     body {
-        background: none;
         background-size: cover;
         background-position-x: center;
         padding-bottom: 40px;
-        zoom: 80%;
+      
     }
 
     .logo img {
@@ -242,7 +239,7 @@ body {
     #event-title-1 {
         margin-left: -40px;
         font-size: 28px;
-        width: 400px;
+        
     }
 
     .sideBtn {
@@ -259,16 +256,13 @@ body {
         margin-left: -45px;
         margin-right: 30px;
     }
-
     #event-desc h1 {
         font-size: 28px;
-
+        
     }
-
-    .out-coming h3 {
+    .out-coming h3{
         font-size: 25px;
     }
-
     #event-coming-image img {
         width: 290px;
     }
@@ -280,42 +274,37 @@ body {
     #event-coming-image img:hover {
         transform: scale(1.2);
     }
-
+ 
     .subnav-links {
         display: flex;
         text-align: center;
-        gap: 90px;
-        padding-top: 20px;
-
+        margin-right: 40px;
     }
 
     .subnav-links a {
-
-        font-size: 17px;
-        font-weight: bold;
-
+        font-family: 'Kablammo', cursive;
+        font-family: 'Lato', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 18px;
     }
-
-
-
+ 
+    
 }
 
-.out-coming h1 {
+.out-coming h1{
     color: black;
     margin-left: 15%;
 }
-
-.out-coming h3 {
+.out-coming h3{
     font-size: 30px;
 }
-
-.coming {
+.coming{
     font-size: 30px;
     font-weight: bold;
     margin-left: 5%;
     color: black;
 }
 
-.imgpost img {
+.imgpost img{
     margin-top: 10%;
 }
