--- a/style/eventpast.css
+++ b/style/eventpast.css
@@ -1,26 +1,24 @@
 body {
     margin: 0;
     background-image: url(../img/bgwhite.png);
-
-
+    
+   
     /* background-color: white; */
     /* background-size: cover;
-    background-position: top; */
+    background-position: top; */ 
     background-position: left bottom -50px;
     background-repeat: no-repeat;
-    zoom: 90%;
-}
 
-.carousel-inner h5 {
+
+}
+.carousel-inner h5{
     font-size: 30px;
     padding-top: 20px;
 }
-
-.carousel-inner img {
+.carousel-inner img{
     width: 300px;
     height: 700px;
 }
-
 #carouselExampleIndicators {
     margin: 0 auto;
 }
@@ -144,7 +142,7 @@ body {
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu', sans-serif;
     color: black;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: bold;
     padding-bottom: 25px;
 }
@@ -166,7 +164,6 @@ body {
     line-height: 35px;
     padding: 0px 30px 0px 30px;
 }
-
 #event-desc2 {
     margin-top: 50px;
     padding: 10px 20px 30px 20px;
@@ -239,11 +236,10 @@ body {
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     body {
-        background: none;
         background-size: cover;
         background-position-x: center;
         padding-bottom: 40px;
-        zoom: 80%;
+       
     }
 
     .logo img {
@@ -270,7 +266,6 @@ body {
     #event-desc p {
         font-size: 16px;
     }
-
     #event-desc2 {
         max-width: 400px;
         padding: 10px 20px 10px 20px;
@@ -291,7 +286,6 @@ body {
         margin-bottom: 20px;
         font-size: 12px;
     }
-
     #event-past2-image {
         display: block;
         margin-left: 15px;
@@ -331,7 +325,6 @@ body {
         margin-left: -45px;
         margin-right: 30px;
     }
-
     #event-desc2 {
         margin-left: -45px;
         margin-right: 30px;
@@ -364,27 +357,26 @@ body {
     .subnav-links {
         display: flex;
         text-align: center;
-        gap: 90px;
-        padding-top: 20px;
-
+        margin-right: 40px;
     }
 
     .subnav-links a {
-
-        font-size: 17px;
-        font-weight: bold;
-
+        font-family: 'Kablammo', cursive;
+        font-family: 'Lato', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 16px;
     }
-
+ 
 }
 
-h1 {
+ h1{
     color: black;
-
+  
 }
 
-.past {
+.past{
     font-size: 30px;
     font-weight: bold;
     margin-left: 5%;
 }
+
