--- a/style/eventpast.css
+++ b/style/eventpast.css
@@ -239,6 +239,7 @@ body {
         background-size: cover;
         background-position-x: center;
         padding-bottom: 40px;
+        background-image: none;
        
     }
 
