--- a/style/eventpieces.css
+++ b/style/eventpieces.css
@@ -190,6 +190,7 @@ body {
         background-size: cover;
         background-position-x: center;
         padding-bottom: 40px;
+        background-image: none;
     }
 
     .logo img {
