--- a/style/eventpast.css
+++ b/style/eventpast.css
@@ -370,7 +370,9 @@ body {
         font-family: 'Ubuntu', sans-serif;
         font-size: 16px;
     }
- 
+    #carouselExampleIndicators{
+        margin-left: 0px;
+    }
 }
 
  h1{
