--- a/style/eventpast.css
+++ b/style/eventpast.css
@@ -11,6 +11,10 @@ body {
 
 
 }
+#event-column-1{
+    margin-left: 20px;
+    margin-top: 20px;
+}
 .carousel-inner h5{
     font-size: 30px;
     padding-top: 20px;
@@ -105,7 +109,7 @@ body {
 }
 
 .subnav-title {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: bold;
     border-bottom: 5px solid black;
     width: 120px;
@@ -151,7 +155,7 @@ body {
     margin-top: 10px;
     padding: 10px 20px 30px 20px;
     border-radius: 30px;
-    max-width: 770px;
+    max-width: 1800px;
     background: rgba(102, 102, 102, 0.5);
 }
 
