--- a/style/eventcoming.css
+++ b/style/eventcoming.css
@@ -180,7 +180,52 @@ body {
 #event-coming-image img:hover {
     transform: scale(1.5);
 }
+@media screen and (max-width: 1020px) {
+    
+    body {
+        background-size: cover;
+        background-position-x: center;
+        padding-bottom: 40px;
+        background-image: none;
+    }
 
+    .logo img {
+        width: 170px;
+        margin-top: -5px;
+        margin-left: -10px;
+    }
+
+    .subnav {
+        margin-left: 35px;
+    }
+
+    .sideBtn {
+        position: sticky;
+        top: 0;
+        right: 0;
+    }
+
+    #event-desc {
+        max-width: 400px;
+        padding: 10px 20px 10px 20px;
+    }
+
+    #event-desc p {
+        font-size: 16px;
+    }
+
+    #event-coming-image {
+        display: block;
+        margin-left: 15px;
+    }
+
+    #event-coming-image p {
+        margin: auto;
+        margin-left: 27%;
+        margin-bottom: 20px;
+        font-size: 12px;
+    }
+}
 /*Tablet view*/
 @media screen and (max-width: 820px) {
     
@@ -228,7 +273,69 @@ body {
         font-size: 12px;
     }
 }
+/*Mobile view*/
+@media screen and (max-width: 620px) {
+    body {
+        background-position-x: center;
+        background-image: none;
+        
+    }
 
+    #event-title-1 {
+        margin-left: -40px;
+        font-size: 28px;
+        
+    }
+
+    .sideBtn {
+        position: sticky;
+        top: 0;
+        right: 0;
+    }
+
+    .event-container-1 {
+        display: block;
+    }
+
+    #event-desc {
+        margin-left: -45px;
+        margin-right: 60px;
+    }
+    #event-desc h1 {
+        font-size: 21px;
+        
+    }
+    
+    .out-coming h3{
+        font-size: 25px;
+    }
+    #event-coming-image img {
+        width: 290px;
+    }
+
+    #event-coming-image p {
+        margin-left: 23%;
+    }
+
+    #event-coming-image img:hover {
+        transform: scale(1.2);
+    }
+    .subnav-links {
+        display: flex;
+        text-align: center;
+        margin-right: 40px;
+    }
+
+    .subnav-links a {
+        font-family: 'Kablammo', cursive;
+        font-family: 'Lato', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 16px;
+    }
+   
+ 
+    
+}
 /*Mobile view*/
 @media screen and (max-width: 420px) {
     body {
@@ -298,11 +405,12 @@ body {
     margin-left: 15%;
 }
 .out-coming h3{
-    font-size: 30px;
+    font-size: 24px;
+    padding: 10px;
 }
 .coming{
     font-size: 30px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-left: 5%;
     color: black;
 }
