--- a/style/eventpast.css
+++ b/style/eventpast.css
@@ -11,6 +11,10 @@ body {
 
 
 }
+.carousel-inner .d-block {
+    width: auto;
+    height: auto;
+  }
 #event-column-1{
     margin-left: 20px;
     margin-top: 20px;
@@ -306,7 +310,77 @@ body {
         margin-left: 100px;
     }
 }
+/* 600px */
+@media screen and (max-width: 620px) {
+    body {
+        background-position-x: center;
+        background-image: none;
+    }
 
+    #event-title-1 {
+        margin-left: -40px;
+        font-size: 28px;
+    }
+
+    .sideBtn {
+        position: sticky;
+        top: 0;
+        right: 0;
+    }
+
+    .event-container-1 {
+        display: block;
+    }
+
+    #event-desc {
+        margin-left: -45px;
+        margin-right: 30px;
+    }
+    #event-desc2 {
+        margin-left: -45px;
+        margin-right: 30px;
+    }
+
+
+    #event-past-image img {
+        width: 290px;
+    }
+
+    #event-past-image p {
+        margin-left: 23%;
+    }
+
+    /* #event-past-image img:hover {
+        transform: scale(1.2);
+    } */
+
+    #event-past2-image img {
+        width: 290px;
+    }
+
+    #event-past2-image p {
+        margin-left: 23%;
+    }
+
+    /* #event-past2-image img:hover {
+        transform: scale(1.2);
+    } */
+    .subnav-links {
+        display: flex;
+        text-align: center;
+        margin-right: 40px;
+    }
+
+    .subnav-links a {
+        font-family: 'Kablammo', cursive;
+        font-family: 'Lato', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 16px;
+    }
+    #carouselExampleIndicators{
+        margin-left: 0px;
+    }
+}
 /*Mobile view*/
 @media screen and (max-width: 420px) {
     body {
