--- a/style/home.css
+++ b/style/home.css
@@ -159,12 +159,45 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 15px 25px 0px 25px;
-    margin-top: -110px;
-    z-index: 1;
+    margin-top: 780px;
 }
 
 .slide-img {
     height: 100%;
+}
+
+.carousel {
+    z-index: -99;
+}
+
+.carousel .item {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+
+}
+
+.carousel .one {
+    background: url(../img/home-bg-2.jpg);
+    background-size: cover;
+    -moz-background-size: cover;
+}
+
+.carousel .two {
+    background: url(../img/people-bg1.jpg);
+    background-size: cover;
+    -moz-background-size: cover;
+}
+
+.carousel .three {
+    background: url(../img/about-bg1.png);
+    background-size: cover;
+    -moz-background-size: cover;
 }
 
 .home-content {
@@ -228,6 +261,10 @@ body {
         max-width: 500px;
         text-align: center;
         z-index: 1;
+    }
+
+    .section {
+        margin-top: 1070px;
     }
 }
 
@@ -372,5 +409,9 @@ body {
     .slide-img {
         scale: 1.2;
         height: 900px;
+    }
+
+    .section {
+        margin-top: -110px;
     }
 }
